# FL_Project

./: .env.example  .gitignore  ARCHITECTURE_PERFORMANCE_SUMMARY.md  BASELINES_SETUP.md  CHANGELOG.md  CURRENT_STATUS.md  EXPERIMENTAL_PLAN.md  GRAPH_OF_THOUGHTS_RUNPOD.md  INSTALL_OLLAMA_WINDOWS.md  LICENSE  LLAVA_MED_GUIDE.md  MODEL_RECOMMENDATIONS.md  PROGRESSIVE_TEMP_V4_ANALYSIS.md  QUICK_START_64GB_4090.md  README.md  READY_TO_RUN.md  RESULTS_PAPER.md  RESULTS_SUMMARY.md  RTX4090_GUIDE.md  RUNPOD_GOT_SETUP_COMPLETE.md  RUNPOD_PRICING_SUMMARY.md  SESSION_SUMMARY.md  SETUP_GUIDE.md  TOKEN_USAGE_SUMMARY.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  test_installation.py  test_mas_only.py  test_ollama_client.py
.claude/: settings.local.json
configs/: default.yaml  eval_medqa.yaml  llama3_70b.yaml  llama3_8b.yaml  llama3_8b_1spec_temp05.yaml  llama3_8b_2spec.yaml  llama3_8b_2spec_temp01.yaml  llama3_8b_2spec_temp05.yaml  llama3_8b_2spec_temp05_nogeneralist.yaml  llama3_8b_2spec_temp07.yaml  llama3_8b_2spec_temp08.yaml  llama3_8b_3spec_temp05.yaml  llama3_8b_4spec_temp00.yaml  llama3_8b_4spec_temp02.yaml  llama3_8b_4spec_temp05.yaml  llama3_8b_difftemp.yaml  llama3_8b_temp01.yaml  llama3_8b_temp05.yaml  llama3_8b_unlimited_tokens.yaml  local_ollama.yaml  mixtral_8x7b.yaml  qwen25_32b.yaml  qwen25_32b_3spec.yaml  qwen25_32b_5spec.yaml  qwen25_32b_temp00.yaml  qwen25_32b_temp01.yaml  qwen25_32b_temp03.yaml  qwen25_32b_temp07.yaml  runpod_graph_of_thoughts.yaml  runpod_qwen25_32b_temp00.yaml  runpod_qwen25_32b_temp01.yaml  runpod_qwen25_32b_temp03.yaml  (+2 more)
(+146 files in other folders)
